<resources>
    <string name="app_name">51-Mobile-Design</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_sign_up">會員註冊</string>
    <string name="title_login">登入</string>
    <string name="title_setting">設定</string>
    <string name="title_toolbar">工具列標題</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="title_app">VA Care</string>
    <string name="title_reserve">疫苗預約</string>
    <string name="title_epidemic_info">疫情資訊</string>
    <string name="title_edu_info">衛教資訊</string>
    <string name="title_temp_rec">體溫紀錄</string>
    <string name="hint_your_email">YOUR EMAIL</string>
    <string name="hint_password">PASSWORD</string>
    <string name="login">登入</string>
    <string name="sign_up">Sign up</string>
    <string name="hint_id">身分證字號</string>
    <string name="hint_password_signup">密碼</string>
    <string name="hint_password_again">再次輸入密碼</string>
    <string name="hint_name">姓名</string>
    <string name="hint_phone">電話</string>
    <string name="hint_address">居住地</string>
    <string name="button_sign_up">註冊</string>
    <string name="user_name">User Name</string>
    <string name="title_account_setting">帳戶設定</string>
    <string name="hint_edit">編輯個人資料</string>
    <string name="hint_edit_password">修改密碼</string>
    <string name="hint_notification">通知設定</string>
    <string name="more">更多</string>
    <string name="about_us">關於我們</string>
    <string name="policy">隱私政策</string>
    <string name="condition">條款和條件</string>
    <string name="hint_search">Search</string>
    <string name="add">Add</string>
    <string name="add_temp_rec">新增體溫紀錄</string>
    <string name="test_temp">30.0°C</string>
    <string name="test_temp2">45°C</string>
    <string name="hint_date">日期</string>
    <string name="test_time">Oct 12,20 21</string>
    <string name="text_am">AM</string>
    <string name="text_pm">PM</string>
    <string name="test_number">45</string>
    <string name="split">:</string>
    <string name="title_cancel">取消</string>
    <string name="title_add">新增</string>
    <string name="test_date">2021年10月30日 星期日 下午 09:54</string>
    <string name="title_edit">編輯</string>
    <string name="title_delete">刪除</string>
    <string name="test_text">是否刪除{2021asdfjsadfkljasdfl;asdfjklsfjlsdfjkadfjasakdfjdfkas}</string>
    <string name="title_delete_temp_rec">確認刪除</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="reserve">預約</string>
    <string name="reserve_point">施打地點</string>
    <string name="moderna">莫德納</string>
    <string name="bnt">BNT</string>
    <string name="az">AZ</string>
    <string name="mvc">高端</string>
    <string name="vaccine_type">疫苗種類</string>
    <string name="test_text_much">許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容許多內容</string>
</resources>