<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.LoginFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_app"
        android:textColor="@color/white"
        android:gravity="center"
        android:fontFamily="sans-serif-black"
        android:textSize="100sp"
        android:layout_marginBottom="80dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:background="@android:color/transparent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_width="match_parent"
        app:hintEnabled="false"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_radius_20dp"
            android:padding="20dp"
            android:hint="@string/hint_your_email"
            android:textColorHint="@color/black"
            android:fontFamily="sans-serif-black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_width="match_parent"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_login_password"
            android:padding="20dp"
            android:inputType="textPassword"
            android:background="@drawable/bg_radius_20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:textColorHint="@color/black"
            android:fontFamily="sans-serif-black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/bg_radius_15dp"
        android:backgroundTint="@color/light_purple"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:padding="15dp" />

    <TextView
        android:id="@+id/button_to_sign_up"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textColor="@color/blue"/>

</androidx.appcompat.widget.LinearLayoutCompat>