<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">
    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_toolbar"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-black"
            android:textSize="20sp"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-light"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/ic_round_arrow_back_ios_24" />
        <TextView
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_gravity="right"
            android:layout_marginEnd="10dp"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-light"
            android:textSize="20sp"
            app:drawableEndCompat="@drawable/ic_round_playlist_add_24"
            tools:ignore="RtlHardcoded" />
    </Toolbar>

</androidx.appcompat.widget.LinearLayoutCompat>