<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.signUp.SignUpFragment">
    <include layout="@layout/toolbar_cancel" android:id="@+id/toolbar_sign_up"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:background="@drawable/bg_radius_20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_id"/>

                <EditText
                    android:id="@+id/text_id"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:importantForAutofill="no"
                    tools:ignore="LabelFor" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_password_signup" />

                <EditText
                    android:id="@+id/text_password"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:importantForAutofill="no"
                    tools:ignore="LabelFor" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_password_again" />

                <EditText
                    android:id="@+id/text_password_again"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    tools:ignore="LabelFor"
                    android:importantForAutofill="no" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_name" />

                <EditText
                    android:id="@+id/text_name"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:importantForAutofill="no"
                    tools:ignore="LabelFor" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_phone" />

                <EditText
                    android:id="@+id/text_phone"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="phone"
                    tools:ignore="LabelFor"
                    android:importantForAutofill="no" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_address" />

                <EditText
                    android:id="@+id/text_address"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPostalAddress"
                    android:importantForAutofill="no"
                    tools:ignore="LabelFor" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_radius_10dp"
                    android:backgroundTint="@color/purple_500"
                    android:layout_gravity="center"
                    android:layout_margin="50dp"
                    android:text="@string/button_sign_up"
                    android:textColor="@color/white"/>


            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>



</androidx.appcompat.widget.LinearLayoutCompat>